--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                       <source
                         media="(min-width: 1920px)"
                         srcset="
-                          ./assets/images/desktop/car@1x.png 1x,
-                          ./assets/images/desktop/car@2x.png 2x
+                          ./assets/images/desktop/car@1x.webp 1x,
+                          ./assets/images/desktop/car@2x.webp 2x
                         "
                         type="image/png"
                         width="460"
@@ -185,14 +185,23 @@
                       <source
                         media="(min-width: 768px)"
                         srcset="
-                          ./assets/images/tablet/car@1x.png 1x,
-                          ./assets/images/tablet/car@2x.png 2x
+                          ./assets/images/tablet/car@1x.webp 1x,
+                          ./assets/images/tablet/car@2x.webp 2x
+                        "
+                        type="image/jpg"
+                        width="344"
+                      />
+                      <source
+                        media="(min-width: 393px)"
+                        srcset="
+                          ./assets/images/mobile/car@1x.webp 1x,
+                          ./assets/images/mobile/car@2x.webp 2x
                         "
                         type="image/jpg"
                         width="344"
                       />
                       <img
-                        src="./assets/images/mobile/car@1x.png"
+                        src="./assets/images/mobile/car@1x.webp"
                         alt="Volkswagen Touareg"
                         width="361"
                         loading="lazy"
@@ -212,7 +221,7 @@
                       <h5 class="subsection-list-title">Included in Price</h5>
                       <ul class="subsection-list">
                         <li class="subsection-list-item">
-                          <svg class="btn__icon" width="16" height="16">
+                          <svg width="16" height="16">
                             <use
                               href="./assets/icons/icons-sprite.svg#icon-check-circle-broken-white"
                             ></use>
@@ -220,7 +229,7 @@
                           <span>Airport/City fee</span>
                         </li>
                         <li class="subsection-list-item">
-                          <svg class="btn__icon" width="16" height="16">
+                          <svg width="16" height="16">
                             <use
                               href="./assets/icons/icons-sprite.svg#icon-check-circle-broken-white"
                             ></use>
@@ -228,7 +237,7 @@
                           <span>Local tax</span>
                         </li>
                         <li class="subsection-list-item">
-                          <svg class="btn__icon" width="16" height="16">
+                          <svg width="16" height="16">
                             <use
                               href="./assets/icons/icons-sprite.svg#icon-check-circle-broken-white"
                             ></use>
@@ -236,7 +245,7 @@
                           <span>Registration fee</span>
                         </li>
                         <li class="subsection-list-item">
-                          <svg class="btn__icon" width="16" height="16">
+                          <svg width="16" height="16">
                             <use
                               href="./assets/icons/icons-sprite.svg#icon-check-circle-broken-white"
                             ></use>
@@ -247,7 +256,7 @@
                     </div>
                     <ul class="subsection-grid">
                       <li class="subsection-grid-item">
-                        <svg class="btn__icon" width="16" height="16">
+                        <svg width="16" height="16">
                           <use
                             href="./assets/icons/icons-sprite.svg#icon-car-doors"
                           ></use>
@@ -255,7 +264,7 @@
                         <span>5 Doors</span>
                       </li>
                       <li class="subsection-grid-item">
-                        <svg class="btn__icon" width="16" height="16">
+                        <svg width="16" height="16">
                           <use
                             href="./assets/icons/icons-sprite.svg#icon-luggage-01"
                           ></use>
@@ -263,7 +272,7 @@
                         <span>3 Suitcase</span>
                       </li>
                       <li class="subsection-grid-item">
-                        <svg class="btn__icon" width="16" height="16">
+                        <svg width="16" height="16">
                           <use
                             href="./assets/icons/icons-sprite.svg#icon-tabler_manual-gearbox"
                           ></use>
@@ -271,7 +280,7 @@
                         <span>5 Manual</span>
                       </li>
                       <li class="subsection-grid-item">
-                        <svg class="btn__icon" width="16" height="16">
+                        <svg width="16" height="16">
                           <use
                             href="./assets/icons/icons-sprite.svg#icon-users-01"
                           ></use>
@@ -286,7 +295,7 @@
                 </button>
               </div>
             </section>
-            <!-- after -->
+
             <section class="step visually-hidden">
               <div class="section-menu hidden-desktop">
                 <div class="container section-container">
@@ -396,14 +405,14 @@
                         <source
                           media="(max-width: 1919px)"
                           srcset="
-                            ./assets/images/tablet/car-mini@1x.png 1x,
-                            ./assets/images/tablet/car-mini@2x.png 2x
+                            ./assets/images/tablet/car-mini@1x.webp 1x,
+                            ./assets/images/tablet/car-mini@2x.webp 2x
                           "
                           type="image/jpg"
                           width="74"
                         />
                         <img
-                          src="./assets/images/mobile/car-mini@1x.png"
+                          src="./assets/images/mobile/car-mini@1x.webp"
                           alt="Volkswagen Touareg"
                           width="74"
                           loading="lazy"
@@ -430,7 +439,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-infinity"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Unlimited mileage</span>
                         <span class="content-large">15 EUR</span>
@@ -463,7 +472,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-globe-05"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Cross-border fee</span>
                         <span class="content-large">15 EUR</span>
@@ -495,7 +504,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-park-outline_petrol"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Full tank service</span>
                         <span class="content-large">15 EUR</span>
@@ -509,7 +518,7 @@
                         aria-label="Full tank service"
                       />
 
-                      <svg class="btn__icon" width="24" height="24">
+                      <svg width="24" height="24">
                         <use
                           class="checkbox-icon-unchecked"
                           href="./assets/icons/icons-sprite.svg#icon-plus"
@@ -528,7 +537,6 @@
                           href="./assets/icons/icons-sprite.svg#icon-baby-seat2"
                         ></use>
                       </svg>
-                      <!-- after -->
                       <div class="content">
                         <span>Child seat</span>
                         <span class="content-large">15 EUR</span>
@@ -561,7 +569,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-navigation-pointer-01"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>GPS navigation system</span>
                         <span class="content-large">15 EUR</span>
@@ -575,7 +583,7 @@
                         aria-label="GPS navigation system"
                       />
 
-                      <svg class="btn__icon" width="24" height="24">
+                      <svg width="24" height="24">
                         <use
                           class="checkbox-icon-unchecked"
                           href="./assets/icons/icons-sprite.svg#icon-plus"
@@ -594,7 +602,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-wifi"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Wi-Fi hotspot</span>
                         <span class="content-large">15 EUR</span>
@@ -608,7 +616,7 @@
                         aria-label="Wi-Fi hotspot"
                       />
 
-                      <svg class="btn__icon" width="24" height="24">
+                      <svg width="24" height="24">
                         <use
                           class="checkbox-icon-unchecked"
                           href="./assets/icons/icons-sprite.svg#icon-plus"
@@ -627,7 +635,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-additional-driver"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Additional driver</span>
                         <span class="content-large">15 EUR</span>
@@ -641,7 +649,7 @@
                         aria-label="Additional driver"
                       />
 
-                      <svg class="btn__icon" width="24" height="24">
+                      <svg width="24" height="24">
                         <use
                           class="checkbox-icon-unchecked"
                           href="./assets/icons/icons-sprite.svg#icon-plus"
@@ -660,7 +668,7 @@
                           href="./assets/icons/icons-sprite.svg#icon-headphones-01"
                         ></use>
                       </svg>
-                      <!-- after -->
+
                       <div class="content">
                         <span>Roadside waiver</span>
                         <span class="content-large">15 EUR</span>
@@ -674,7 +682,7 @@
                         aria-label="Roadside waiver"
                       />
 
-                      <svg class="btn__icon" width="24" height="24">
+                      <svg width="24" height="24">
                         <use
                           class="checkbox-icon-unchecked"
                           href="./assets/icons/icons-sprite.svg#icon-plus"
@@ -697,7 +705,7 @@
                 </ul>
               </div>
             </section>
-            <!-- after -->
+
             <section class="step visually-hidden">
               <div class="section-menu hidden-desktop">
                 <div class="container section-container">
@@ -795,14 +803,14 @@
                         <source
                           media="(max-width: 1919px)"
                           srcset="
-                            ./assets/images/tablet/car-mini@1x.png 1x,
-                            ./assets/images/tablet/car-mini@2x.png 2x
+                            ./assets/images/tablet/car-mini@1x.webp 1x,
+                            ./assets/images/tablet/car-mini@2x.webp 2x
                           "
                           type="image/jpg"
                           width="74"
                         />
                         <img
-                          src="./assets/images/mobile/car-mini@1x.png"
+                          src="./assets/images/mobile/car-mini@1x.webp"
                           alt="Volkswagen Touareg"
                           width="74"
                           loading="lazy"
@@ -1100,7 +1108,7 @@
                 <form class="booking-form">
                   <label class="form-label booking">
                     First name <span class="label-asterisk">&#42;</span>
-                    <!-- after -->
+
                     <input
                       type="text"
                       name="first-name"
@@ -1116,7 +1124,7 @@
                   </label>
                   <label class="form-label booking">
                     Last name <span class="label-asterisk">&#42;</span>
-                    <!-- after -->
+
                     <input
                       type="text"
                       name="last-name"
@@ -1169,7 +1177,7 @@
 
                   <label class="form-label booking">
                     Email <span class="label-asterisk">&#42;</span>
-                    <!-- after -->
+
                     <input
                       type="email"
                       name="email"
@@ -1191,11 +1199,11 @@
                     <span class="item-title">Date</span>
                     <div class="item-subscription time">
                       <span class="start-date">Jan 1</span>
-                      <!-- after -->
+
                       <span class="start-time">08:00</span>
-                      <!-- after -->
+
                       <span class="end-date">Jan 2</span>
-                      <!-- after -->
+
                       <span class="end-time">20:00</span>
                     </div>
                   </li>
@@ -1203,7 +1211,7 @@
                     <span class="item-title">Location</span>
                     <div class="item-subscription location">
                       <span class="pick-up">Bratislava Bus Terminal</span>
-                      <!-- after -->
+
                       <span class="drop-off">Bratislava Bus Terminal</span>
                     </div>
                   </li>
@@ -1224,7 +1232,7 @@
 
               <label class="booking-checkbox">
                 <input type="checkbox" name="accept" class="visually-hidden" />
-                <svg class="btn__icon" width="20" height="20">
+                <svg width="20" height="20">
                   <use
                     class="checkbox-icon-unchecked"
                     href="./assets/icons/icons-sprite.svg#icon-checkbox-unchecked"
@@ -1255,19 +1263,16 @@
               <div class="avatar-thumb">
                 <img src="./assets/images/avatar-1.png" alt="" />
               </div>
-              <!-- after -->
             </li>
             <li class="avatar even">
               <div class="avatar-thumb">
                 <img src="./assets/images/avatar-2.png" alt="" />
               </div>
-              <!-- after -->
             </li>
             <li class="avatar odd">
               <div class="avatar-thumb">
                 <img src="./assets/images/avatar-3.png" alt="" />
               </div>
-              <!-- after -->
             </li>
           </ul>
           <div class="contact-us-content">
@@ -1312,7 +1317,7 @@
             <button class="btn secondary small">Subscribe</button>
           </form>
         </div>
-        <!-- after -->
+
         <div class="footer-secondary-content">
           <span>&copy; 2077 Untitled UI. All rights reserved.</span>
           <ul class="footer-list">
