--- a/index.html
+++ b/index.html
@@ -1261,17 +1261,29 @@
           <ul class="avatar-list">
             <li class="avatar odd">
               <div class="avatar-thumb">
-                <img src="./assets/images/avatar-1.png" alt="" />
+                <img
+                  src="./assets/images/avatar-1.webp"
+                  alt="manager-1"
+                  loading="lazy"
+                />
               </div>
             </li>
             <li class="avatar even">
               <div class="avatar-thumb">
-                <img src="./assets/images/avatar-2.png" alt="" />
+                <img
+                  src="./assets/images/avatar-2.webp"
+                  alt="manager-2"
+                  loading="lazy"
+                />
               </div>
             </li>
             <li class="avatar odd">
               <div class="avatar-thumb">
-                <img src="./assets/images/avatar-3.png" alt="" />
+                <img
+                  src="./assets/images/avatar-3.webp"
+                  alt="manager-3"
+                  loading="lazy"
+                />
               </div>
             </li>
           </ul>
