--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                           ./assets/images/desktop/car@1x.webp 1x,
                           ./assets/images/desktop/car@2x.webp 2x
                         "
-                        type="image/png"
+                        type="image/webp"
                         width="460"
                       />
                       <source
@@ -188,7 +188,7 @@
                           ./assets/images/tablet/car@1x.webp 1x,
                           ./assets/images/tablet/car@2x.webp 2x
                         "
-                        type="image/jpg"
+                        type="image/webp"
                         width="344"
                       />
                       <source
@@ -197,7 +197,7 @@
                           ./assets/images/mobile/car@1x.webp 1x,
                           ./assets/images/mobile/car@2x.webp 2x
                         "
-                        type="image/jpg"
+                        type="image/webp"
                         width="344"
                       />
                       <img
@@ -408,7 +408,7 @@
                             ./assets/images/tablet/car-mini@1x.webp 1x,
                             ./assets/images/tablet/car-mini@2x.webp 2x
                           "
-                          type="image/jpg"
+                          type="image/webp"
                           width="74"
                         />
                         <img
@@ -1265,6 +1265,7 @@
                   src="./assets/images/avatar-1.webp"
                   alt="manager-1"
                   loading="lazy"
+                  width="56"
                 />
               </div>
             </li>
@@ -1274,6 +1275,7 @@
                   src="./assets/images/avatar-2.webp"
                   alt="manager-2"
                   loading="lazy"
+                  width="56"
                 />
               </div>
             </li>
@@ -1283,6 +1285,7 @@
                   src="./assets/images/avatar-3.webp"
                   alt="manager-3"
                   loading="lazy"
+                  width="56"
                 />
               </div>
             </li>
