improved performance and accessibility

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
           <li class="hidden-desktop">
             <button
               class="mobile-menu-btn js-toggle-menu"
+              aria-label="Mobile menu"
               aria-expanded="false"
               type="button"
             >
@@ -204,7 +205,6 @@
                         src="./assets/images/mobile/car@1x.webp"
                         alt="Volkswagen Touareg"
                         width="361"
-                        loading="lazy"
                       />
                     </picture>
                   </div>
