--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
+      as="style"
     />
     <link rel="icon" type="image/png" href="./assets/icons/favicon.png" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link
+      rel="preload"
+      href="./css/index.css"
+      as="style"
+      onload="this.rel='stylesheet'"
+    />
+    <noscript><link rel="stylesheet" href="./css/index.css" /></noscript>
+    <!-- <link rel="stylesheet" href="./css/index.css" /> -->
     <title>FLEXICAR</title>
     <script src="https://unpkg.com/inputmask@5.0.8/dist/inputmask.min.js"></script>
   </head>
@@ -1465,6 +1473,6 @@
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/language-select.js"></script>
     <script src="./js//step-navigator.js"></script>
-    <script src="./js/country-code-select.js"></script>
+    <script src="./js/country-code-select.js" defer></script>
   </body>
 </html>
